--- a/P1-博客文章/index.html
+++ b/P1-博客文章/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
   <!-- 这篇文章改编于: http://blog.udacity.com/2016/03/humans-vs-machines-an-ai-odyssey-2.html -->
-  <!-- 调整文字的样式使其与模版一波一样! -->
+  <!-- 以下是这篇文章的纯文本。请通过加入 HTML 元素，使其与模版（博客样板.pdf）一模一样! -->
+  <!-- 注：在此项目中，你不需要考虑字体（font）的问题 -->
+
   Humans vs. Machines: An AI Odyssey
   
   By Christopher Watkins 
