--- a/P2-动物交换卡/card.html
+++ b/P2-动物交换卡/card.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div>
-		<!-- 在下面输入你最喜欢的动物的名字 -->
+		<!-- 在下面输入你最喜欢的动物（或者其他...）的名字 -->
 		<h3>动物名称</h3>
 		<!-- 在下面输入你最喜欢的动物的图片 -->
 		<img src="placeholder.png" alt="name-of-your-animal">
